--- a/_includes/filters.html
+++ b/_includes/filters.html
@@ -1,5 +1,5 @@
 <div class="ar-filters">
-  <div class="color-bg-3 p-5">
+  <div class="color-bg-3 p-y3 p-x5">
     <div class="m-y2">
       <h3 class="text-h4">Type algoritme</h3>
       <p class="text-body">
