--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,8 +17,7 @@
         >
       </div>
       <div>
-        <a href="#" class="text-menu color-1 p-x3">Help</a
-        ><!-- TODO added p-x3 here -->
+        <a href="#" class="text-menu color-1 p-x3">Help</a>
       </div>
     </div>
   </div>
