--- a/_includes/results.html
+++ b/_includes/results.html
@@ -1,3 +1,4 @@
-<h2 class="text-h2 p-t5" id="results-header">{{ site.title }}</h2>
+<h2 class="text-h2 p-t4" id="results-header">{{ site.title }}</h2>
+<hr class="hr">
 <div id="search-results"></div>
 {% include result-template.html %}
