--- a/_layouts/algoritmes.html
+++ b/_layouts/algoritmes.html
@@ -6,7 +6,7 @@
       {% include header.html crumble=false searchbar=true %}
       <section class="ar-teaser-block">
         <div class="layout">
-          <div class="layout-1 layout-md-1-4">
+          <div class="layout-1 layout-md-1-4 p-t1">
             {% include filters.html %}
           </div>
           <div class="layout-1 layout-md-3-4">
