--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,5 +3,6 @@
   <title>{{ site.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/css/algoritmeregister.css" />
+  <link rel="stylesheet" href="/css/overwrites.css" />
   <link rel="canonical" href="https://www.algoritmeregister.nl/" />
 </head>
