--- a/_includes/result-template.html
+++ b/_includes/result-template.html
@@ -1,5 +1,5 @@
 <script type="text/html" id="result_tmpl">
-  <div class="ar-teaser" data-search-text="<%=name.toLowerCase()%> <%=organization.toLowerCase()%> <%=description_short%> type:<%=type.toLowerCase()%>">
+  <div class="ar-teaser" data-search-text="name:<%=name.toLowerCase()%> organization:<%=organization.toLowerCase()%> <%=description_short%> type:<%=type.toLowerCase()%>">
     <div class="m-y4">
       <h3 class="text-h3 m-b2 color-6">
         <a href="/algoritmes/details/#<%=id%>"><%=name%></a>
