--- a/_includes/filters.html
+++ b/_includes/filters.html
@@ -3,42 +3,64 @@
     <div class="m-y2">
       <h3 class="text-h4">Type algoritme</h3>
       <p class="text-body">
-        <a href="?search='type:rule-based'">Regelgebaseerd</a>
+        <a href="?q=type:rule">Regelgebaseerd</a>
         <span class="color-2">(0)</span>
       </p>
       <p class="text-body">
-        <a href="?search='type:self-learning'">(Zelf)lerend</a>
+        <a href="?q=type:zelf">(Zelf)lerend</a>
         <span class="color-2">(0)</span>
       </p>
       <p class="text-body">
-        <a href="?search='type:unknown'">Onbekend</a>
+        <a href="?q=type:onbekend">Onbekend</a>
         <span class="color-2">(0)</span>
       </p>
     </div>
-    <div class="m-y4">
+    <!-- <div class="m-y4">
       <h3 class="text-h4">Risico categorie</h3>
       <p class="text-body">Verboden <span class="color-2">(0)</span></p>
       <p class="text-body">Hoog risico <span class="color-2">(0)</span></p>
       <p class="text-body">Laag risico <span class="color-2">(0)</span></p>
       <p class="text-body">Geen risico <span class="color-2">(0)</span></p>
-    </div>
-    <div class="m-y4">
+    </div> -->
+    <!-- <div class="m-y4">
       <h3 class="text-h4">Thema</h3>
       <p class="text-body">Verkeer <span class="color-2">(0)</span></p>
       <p class="text-body">Inkomen <span class="color-2">(0)</span></p>
       <p class="text-body">Belastingen <span class="color-2">(0)</span></p>
       <p><a href="" class="text-body color-2">meer ...</a></p>
-    </div>
+    </div> -->
     <div class="m-y4">
       <h3 class="text-h4">Organisatie</h3>
       <p class="text-body">
-        Gemeente Den Haag <span class="color-2">(0)</span>
+        <a href="?q=organization:Gemeente Amsterdam">Gemeente Amsterdam</a> <span class="color-2">(0)</span>
       </p>
-      <p class="text-body">Gemeente Utrecht <span class="color-2">(0)</span></p>
       <p class="text-body">
-        Gemeente Amsterdam <span class="color-2">(0)</span>
+        <a href="?q=organization:Gemeente Den Haag">Gemeente Den Haag</a> <span class="color-2">(0)</span>
       </p>
-      <!-- <p class="text-body">Min BZK <span class="color-2">(12)</span></p> -->
+      <p class="text-body">
+        <a href="?q=organization:Gemeente Rotterdam">Gemeente Rotterdam</a> <span class="color-2">(0)</span>
+      </p>
+      <p class="text-body">
+        <a href="?q=organization:Gemeente Utrecht">Gemeente Utrecht</a> <span class="color-2">(0)</span>
+      </p>
+      <p class="text-body">
+        <a href="?q=organization:Ministerie BZK">Binnenlandse Zaken &hellip;</a> <span class="color-2">(0)</span>
+      </p>
+      <p class="text-body">
+        <a href="?q=organization:Ministerie SZW">Sociale Zaken en &hellip;</a> <span class="color-2">(0)</span>
+      </p>
+      <p class="text-body">
+        <a href="?q=organization:Ministerie JenV">Justitie en &hellip;</a> <span class="color-2">(0)</span>
+      </p>
+      <p class="text-body">
+        <a href="?q=organization:Ministerie EZK">Economische Zaken &hellip;</a> <span class="color-2">(0)</span>
+      </p>
+      <p class="text-body">
+        <a href="?q=organization:Ministerie FIN">Financiën</a> <span class="color-2">(0)</span>
+      </p>
+      <p class="text-body">
+        <a href="?q=organization:Ministerie IenW">Infrastructuur &hellip;</a> <span class="color-2">(0)</span>
+      </p>
       <p><a href="" class="text-body color-2">meer ...</a></p>
     </div>
   </div>
