--- a/_includes/filters.html
+++ b/_includes/filters.html
@@ -11,7 +11,7 @@
         <span class="color-2">(0)</span>
       </p>
       <p class="text-body">
-        <a href="?q=type:onbekend">Onbekend</a>
+        <a href="?q=type:informatie niet beschikbaar">Onbekend</a>
         <span class="color-2">(0)</span>
       </p>
     </div>
