remove bit of spacing in details

--- a/_includes/details-template.html
+++ b/_includes/details-template.html
@@ -79,7 +79,7 @@
 
             <% } %>
 
-            <div class="p-b4 p-x4">
+            <div class="p-x4">
               <div class="markup-zone">
                 <h4><%=schema.properties[property].name%></h4>
                 <p><%=item[property]%></p>
