--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,4 +5,5 @@
   <link rel="stylesheet" href="/css/algoritmeregister.css" />
   <link rel="stylesheet" href="/css/overwrites.css" />
   <link rel="canonical" href="https://www.algoritmeregister.nl/" />
+  <meta http-equiv="Refresh" content="0; url='https://www.algoritmeregister.org'" />
 </head>
