update top notification

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="ovnl-header m-b4">
-  <p style="background: #e5f1f9; color: #154273; font-family: 'RO Sans Regular', 'sans-serif'; text-align: center; height: 2em; line-height: 2em">Dit is nog niet het algoritmeregister, maar een voorbeeldwebsite. Zie voor meer informatie <a href="https://www.algoritmeregister.org">algoritmeregister.org</a>.</p>
+  <p style="background: #e5f1f9; color: #154273; font-family: 'RO Sans Regular', 'sans-serif'; text-align: center; line-height: 1.5em; padding: 1em">Dit is nog niet het algoritmeregister, maar een voorbeeldwebsite. Zie voor meer informatie <a href="https://www.algoritmeregister.org">algoritmeregister.org</a>.</p>
   <div class="layout p-y3">
     <div class="layout-1">
       <div class="u-flex u-space-between u-align-center">
