--- a/_includes/details-template.html
+++ b/_includes/details-template.html
@@ -71,7 +71,7 @@
                 style="cursor: pointer"
                 class="collapsible-section-header color-bg-3 u-border-radius m-y4 p-y3 p-x4 u-flex u-space-between u-align-center"
               >
-                <a href="#" class="text-h3 color-6"><%=category%></a>
+                <h3 class="text-h3 color-6"><%=category%></h3>
                 <img
                   src="https://tydelyk.nl/algoritmeregister/img/arrow-right.png"
                   style="height: 16px; opacity: 0.5"
