--- a/_includes/details-template.html
+++ b/_includes/details-template.html
@@ -87,6 +87,7 @@
                   <div class="p-x4">
                     <div class="markup-zone">
                       <h4><%=information[category][property].name%></h4>
+                      <p class="m-y1" style="color: #333"><i><%=information[category][property].description%></i></p>
                       <p><%=item[property]%></p>
                       <hr />
                     </div>
