update launch schema and information

--- a/_includes/details-template.html
+++ b/_includes/details-template.html
@@ -9,7 +9,7 @@
             algoritmeregister van <%=item.organization%>.
           </p>
           <a
-            href="<%=item.website%>"
+            href="<%=item.url%>"
             class="text-body u-text-underline color-6"
             target="_blank"
           >
